# X11Test

./: App.cpp  App.h  CMakeLists.txt  README.md  TestApp.cpp  TestApp.h  main.cpp
.github/workflows/: codeql.yml
core/: App.cpp  App.h  EventMask.h  KeyStateManager.h
core/lib/: AtomManager.h
lib/: App.cpp  App.h  EventMask.h  FontDescriptor.h
src/: ExampleApp.cpp  ExampleApp.h  allocTracker.h  main.cpp
src/example/: ExampleApp.cpp  ExampleApp.h
src/examples/: GameOfLife.cpp  GameOfLife.h
src/helper/: ScopeTimer.h  allocTracker.h  x11Detection.h
